test: 문자열을 , 기준으로 자르는 test 코드 변경
입력된 문자열이 null이 아닌 빈 문자열일때를 test 하는 코드로 수정